[package]
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"
name = "loony-web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "loony-http",
  # "loony-server",
  "loony-test",
  "loony-service",
  "loony-futures", 
  "loony-macro",
]

[dependencies]
loony-http = {path = "./loony-http"}
# loony-server = {path = "./loony-server"}
loony-test = {path = "./loony-test"}
loony-service = {path = "./loony-service"}
loony-futures = {path = "./loony-futures"}
loony-macro = {path = "./loony-macro"}
fxhash = "0.2.1"
http = "0.2.1"
futures = "0.3.8"
httparse = "1.3.5"
multipart = "0.17.1"
socket2 = "0.4.0"


[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]