[package]
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"
name = "http-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "s4nk4r-http",
  # "s4nk4r-server",
  "s4nk4r-test",
  "s4nk4r-service",
  "s4nk4r-futures", 
  "s4nk4r-macro",
  "s4nk4r-practise",
]

[dependencies]
s4nk4r-http = {path = "./s4nk4r-http"}
s4nk4r-test = {path = "./s4nk4r-test"}
s4nk4r-macro = {path = "./s4nk4r-macro"}
s4nk4r-service = {path = "./s4nk4r-service"}
# s4nk4r-server = {path = "./s4nk4r-server"}
s4nk4r-futures = {path = "./s4nk4r-futures"}
s4nk4r-practise = {path = "./s4nk4r-practise"}
fxhash = "0.2.1"
http = "0.2.1"
futures = "0.3.8"
httparse = "1.3.5"
multipart = "0.17.1"
socket2 = "0.4.0"
ahash = "0.7.2"
bytes = "1.0.1"
scylla = "0.1.0"
tokio = { version = "1.1.0", features = ["full"] }
pin-project = "1.0.1"
futures-util = "0.3.15"


[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]

# [[bin]]
# name = "main.rs"
# path = "/src/main.rs"