[package]
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"
name = "http-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "loony-http",
  # "loony-server",
  "loony-test",
  "loony-service",
  "loony-futures", 
  "loony-macro",
  "loony-practise",
]

[dependencies]
loony-http = {path = "./loony-http"}
loony-test = {path = "./loony-test"}
loony-macro = {path = "./loony-macro"}
loony-service = {path = "./loony-service"}
# loony-server = {path = "./loony-server"}
loony-futures = {path = "./loony-futures"}
loony-practise = {path = "./loony-practise"}
fxhash = "0.2.1"
http = "0.2.1"
futures = "0.3.8"
httparse = "1.3.5"
multipart = "0.17.1"
socket2 = "0.4.0"
ahash = "0.7.2"
bytes = "1.0.1"
scylla = { version="0.12.0",features = ["ssl", "cloud", "chrono", "time", "num-bigint-03", "num-bigint-04", "bigdecimal-04"]}
tokio = { version = "1.1.0", features = ["full"] }
pin-project = "1.0.1"
futures-util = "0.3.15"
serde = { version = "1.0.117", features = ['derive'] }
serde_json = "1.0.59"
derive_more = "0.99.16"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
cargo-expand = "1.0.9"
tokio-postgres = "0.7.10"
deadpool-postgres = "0.12.1"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]

# [[bin]]
# name = "main.rs"
# path = "/src/main.rs"