[package]
name = "loony-test"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version ="0.7", features= ["os-poll", "net"]}
fxhash = "0.2.1"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]

[[example]]
name = "array_test"
path = "src/array_test.rs"


[[example]]
name = "http_parse"
path = "src/http_parse.rs"