[package]
name = "s4nk4r-futures"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.7"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]